# sr-olthad

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  quick_tests.py  requirements.txt  run_gui.py  setup.sh  start.sh
research/: utils.py
research/data/: example.txt
research/experiments/: semantic_steve_utils.py
research/experiments/semantic_steve/: get_prompt_input.py  get_task_score.py  plot.py  prompt.py  prompt_inserts.py  prompts.py  utils.py
research/experiments/semantic_steve/examples/: README.md
research/experiments/semantic_steve/examples/planner/: approach_signs_of_desert_village.py  take_screenshot_of_dug_hole_fn_call_4.py  take_screenshot_of_iron_block_approach_tree.py  take_screenshot_of_iron_block_dig_down.py  take_screenshot_of_placed_cobblestone_2.py  take_screenshot_of_placed_dirt_1.py
research/experiments/semantic_steve/rag/: README.md  constants.py  create_db.py  embed.py  get_db.py  retrieve.py  schema.py  utils.py
research/experiments/semantic_steve/results/: results.csv
research/scripts/: print_dummy_prompts.py  quick_tests.py  run_gui.py  run_gui_semantic_steve.py  run_semantic_steve_experiments.py  test_imports.py  test_semantic_steve_install.py
sr-olthad/: README.md  pyproject.toml
sr-olthad/sr_olthad/: __init__.py  config.py  lm_step.py  olthad.py  registry.py  schema.py  sr_olthad.py  utils.py
sr-olthad/sr_olthad/agents/: attempt_summarizer.py  backtracker.py  forgetter.py  planner.py
sr-olthad/sr_olthad/framework/: lms.py  utils.py
sr-olthad/sr_olthad/framework/agents/: __init__.py  instruct_lm.py
sr-olthad/sr_olthad/gui/: gui.py  styles.css
sr-olthad/sr_olthad/prompts/: __init__.py  _strings.py  attempt_summarizer.py  planner.py
sr-olthad/sr_olthad/prompts/backtracker/: _common.py  exhaustive_effort_clf.py  most_worthwhile_pursuit_clf.py  partial_success_clf.py  successful_completion_clf.py
sr-olthad/src/sr_olthad/: config.py  lm_step.py  sr_olthad.py  utils.py
sr-olthad/src/sr_olthad/agents/: attempt_summarizer.py  backtracker.py  forgetter.py  planner.py
sr-olthad/src/sr_olthad/common/: lms.py  utils.py
sr-olthad/src/sr_olthad/common/agents/: __init__.py  instruct_lm.py
sr-olthad/src/sr_olthad/prompts/: attempt_summarizer.py  planner.py
sr-olthad/src/sr_olthad/prompts/backtracker/: exhaustive_effort_clf.py  most_worthwhile_pursuit_clf.py  partial_success_clf.py  successful_completion_clf.py
sr-olthad/tests/: test_olthad.py  test_utils.py
sr-olthad/tests/framework/: test_framework_utils.py
sr-olthad/tests/prompts/: test_planner_prompts.py
src/: enums.py  instruct_lms.py  lms.py  schema.py  single_turn_chat_agent.py  types_and_models.py  utils.py
src/agent_framework/: lms.py  schema.py  utils.py
src/agent_framework/agents/: __init__.py  instruct_lm_chat.py  single_turn_chat.py
src/common/: lms.py  schema.py  utils.py
src/common/agents/: __init__.py  instruct_lm.py
src/gui/: gui.py  styles.css
src/sr_olthad/: __init__.py  config.py  emissions.py  enums.py  lm_step.py  olthad.py  olthad_traversal.py  prompts.py  schema.py  sr_olthad.py  step.py  task_node.py  utils.py
src/sr_olthad/agents/: __init__.py  attempt_summarizer.py  backtracker.py  config.py  forgetter.py  planner.py  prompt.py
src/sr_olthad/agents/attempt_summarizer/: __init__.py  attempt_summarizer.py  prompt.py
src/sr_olthad/agents/backtracker/: __init__.py  backtracker.py
src/sr_olthad/agents/backtracker/agents/: __init__.py
src/sr_olthad/agents/backtracker/agents/exhaustive_effort/: __init__.py  exhaustive_effort.py
src/sr_olthad/agents/backtracker/agents/most_worthwhile_pursuit/: __init__.py  most_worthwhile_pursuit.py  prompts.py
src/sr_olthad/agents/backtracker/agents/partial_success/: __init__.py  partial_success.py
src/sr_olthad/agents/backtracker/agents/successful_completion/: __init__.py  prompts.py  successful_completion.py
src/sr_olthad/agents/backtracker/prompt/: __init__.py  common.py  exhaustive_effort.py  most_worthwhile_pursuit.py  partial_success.py  successful_completion.py
src/sr_olthad/agents/backtracker/prompts/: __init__.py  exhaustive_effort.py  most_worthwhile_pursuit.py  partial_success.py  successful_completion.py
src/sr_olthad/agents/forgetter/: __init__.py  forgetter.py
src/sr_olthad/agents/planner/: __init__.py  planner.py  prompt.py
src/sr_olthad/olthad/: __init__.py  olthad_traversal.py  task_node.py  task_status.py  traversal.py
src/sr_olthad/prompts/: attempt_summarizer.py  forgetter.py  planner.py
src/sr_olthad/prompts/backtracker/: _common.py  exhaustive_effort_clf.py  most_worthwhile_pursuit_clf.py  partial_success_clf.py  successful_completion_clf.py
src/sr_olthad_minecraft/gui/: gui.py
