[project]
name = "sr-olthad-minecraft"
version = "0.1.0"
description = "Using sr-olthad for Minecraft"
readme = "README.md"
authors = [
    { name = "Sonny George", email = "sonnygeorge5@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0.0,<3",
    "sr-olthad",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]

[tool.uv.workspace]
members = ["sr-olthad"]

[tool.uv.sources]
sr-olthad = { workspace = true }

[tool.ruff]
line-length = 93
target-version = "py311"

extend-exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E203",  # whitespace before ':' (black-compatible)
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by line-length setting)
]

fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"quick_tests.py" = ["E402"]
"run_gui.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["sr_olthad"]
