[project]
name = "sr-olthad-research"
version = "0.1.0"
description = "sr-OLTHAD research repository"
readme = "README.md"
authors = [
    { name = "Sonny George", email = "sonnygeorge5@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "sr-olthad",
    "semantic-steve",
    "python-dotenv",
    "sentence-transformers>=4.1.0",
    "chromadb>=1.0.6",
]

[tool.uv.workspace]
members = ["sr-olthad"]

[tool.uv.sources]
sr-olthad = { workspace = true }
semantic-steve = { git = "https://github.com/sonnygeorge/semantic-steve.git", branch = "dev" }

[tool.ruff]
line-length = 93
target-version = "py311"

extend-exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E203", "E266", "E501"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"quick_tests.py" = ["E402"]
"run_gui.py" = ["E402"]
"research/scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["sr_olthad", "research"]
