[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-olthad"
version = "0.1.0"
description = "Structured Reasoning With Open-Language Hierarchies of Any Depth"
readme = "README.md"
authors = [
    { name = "Sonny George", email = "sonnygeorge5@gmail.com" },
]
requires-python = ">=3.11"
# TODO: once this package can interchangeably support different model providers,
#   `openai` should be declared as an "optional dependency" (think `pip install sr-olthad[openai]`)
#   see also: https://docs.astral.sh/uv/concepts/projects/dependencies/#optional-dependencies
dependencies = [
    "jinja2>=3.0.0,<4",
    "openai>=1.60.0,<2",
    "pydantic>=2.0.0,<3",
]
